Covers holes and corners of dock

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,10 @@
 			"toChunk": 9,
 			"comment": "Hantu DryDock Wall"
 		},{
+			"runtimeID": "00B0574C76BBCED5",
+			"toChunk": 1,
+			"comment": "Berlin Interior Column"
+		},{
 			"runtimeID": "004DA0BCD65E10E7",
 			"toChunk": 9,
 			"comment": "Hantu car park boom"
