- Replaces plywood doors with Miami_Underground doors - Replaces plywood doorframes with non-plywood ones - WIP replaces plywood support beams with Mendoza support beams

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,10 @@
 			"toChunk": 1,
 			"comment": "Berlin Interior Column"
 		},{
+			"runtimeID": "00A0B579589BB5B9",
+			"toChunk": 1,
+			"comment": "llama_silo_support_beam_a"
+		},{
 			"runtimeID": "004DA0BCD65E10E7",
 			"toChunk": 9,
 			"comment": "Hantu car park boom"
