--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,10 @@
 	"dependencies": [
 		"005415E5BE265EFD",{"runtimeID":"003D96EAECB00C82","comment":"adonis_sky","toChunk":1},
 		{
+			"runtimeID": "0069DB569844D774",
+			"toChunk": 9,
+			"comment": "Mumbai Pier"
+		},{
 			"runtimeID": "00A4A5DCDA87B315",
 			"toChunk": 9,
 			"comment": "Hantu DryDock Wall"
