--- a/manifest.json
+++ b/manifest.json
@@ -141,6 +141,105 @@
 			"runtimeID": "007DFE9269EB5C3D",
 			"toChunk": 19,
 			"comment": "Hantu helipad"
+		},
+
+
+
+
+		{
+			"runtimeID": "00E469188552EC1F",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00BF85ABEE02BB26",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "005929AF3EB3D40A",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00C312DAD0274270",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00192C7D0CB416CA",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00C6558AF015409C",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "003CB405EBDA9734",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "0006121E258E3004",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00D792CB012B3D99",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "0047E7572AEAEF41",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "0054FD4816B6EC72",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "000A8A7677074525",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00AD48CD4FD9CD32",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00967033D800E1F0",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "006B2E5F060937CD",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "0018B43ABE250084",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00CEFE0660C52EB3",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00B636F671A5D2E2",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "00A9D09B4D03607E",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
 		}
 	
 
