WIP sundeck props

--- a/manifest.json
+++ b/manifest.json
@@ -241,6 +241,11 @@
 			"runtimeID": "00316A7197B8CB91",
 			"toChunk": 19,
 			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "0021E8649925C8A0",
+			"toChunk": 19,
+			"comment": "Haven scuba diving stuff"
 		}
 	
 
