no more tree bags + fences finished + WIP innerwall supports in Deck00 created but not placed

--- a/manifest.json
+++ b/manifest.json
@@ -342,6 +342,11 @@
 			"runtimeID": "0021E8649925C8A0",
 			"toChunk": 19,
 			"comment": "Haven scuba diving stuff"
+		},
+		{
+			"runtimeID": "004AC276338CB677",
+			"toChunk": 19,
+			"comment": "Paris tree foot for palm tree"
 		}
 	
 
