- Replaces generic non-Soviet voices with hispanic ones (placeholder on guards for deploy time purposes) - Adds more fencing - More background mountains - Deletes some floating fences - Convert windowed rooms to CSM to reduce lighting issues - Adds Soviet helicopter to runway - Deletes stupid flood lights

--- a/manifest.json
+++ b/manifest.json
@@ -261,6 +261,10 @@
 		"enabledByDefault": true,
 		"type": "checkbox",
 		"dependencies": [{
+			"runtimeID": "00AE4095BD7B4BB8",
+			"comment": "Soviet Helicopter",
+			"portFromChunk1": true
+		},{
 			"runtimeID": "00630331F49279F5",
 			"comment": "Dugong Sound",
 			"portFromChunk1": true
