- Standalone version moves all of Miami to fix issues (Camera sequence, crowds, etc) - Crowd brought back for standalone version - Bricks restructured to standalone and combined versions can use same bricks with overrides - Neither contract loads the Freelancer brick (which is broken for some reason)

--- a/project.json
+++ b/project.json
@@ -1,27 +1,1 @@
-{
-    "customPaths": [
-        "[assembly:/_pro/scenes/missions/thefacility/override_yacht.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/override_yacht.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/mild_yacht.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/mild_yacht.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/miami/miami_yacht.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/miami/miami_yacht.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/trainingset_yacht_miami.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/trainingset_yacht_miami.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/dressing_module_002_miami.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/dressing_module_002_miami.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/npc_module_002_miami.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/npc_module_002_miami.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/miami/scene_miami_yacht.navp].pc_navp",
-        "[assembly:/_pro/scenes/missions/miami/scene_miami_yacht.airg].pc_airg",
-        "[assembly:/_pro/environment/templates/levels/the_facility/facility_yacht.template?/module_yacht_miami.entitytemplate].pc_entitytype",
-        "[assembly:/_pro/environment/templates/levels/the_facility/facility_yacht.template?/module_yacht_miami.entitytemplate].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/real_hangar.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/real_hangar.brick].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht.entity].pc_",
-        "[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht.entity].pc_entitytemplate",
-        "[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht.entity].pc_entityblueprint",
-        "[assembly:/_pro/scenes/missions/thefacility/levelcontrol_module_002_b_miami.brick].pc_entitytype",
-        "[assembly:/_pro/scenes/missions/thefacility/levelcontrol_module_002_b_miami.brick].pc_entityblueprint"
-    ]
-}
+{"customPaths":["[assembly:/_pro/scenes/missions/thefacility/override_yacht.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/override_yacht.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/mild_yacht.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/mild_yacht.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/miami/miami_yacht.brick].pc_entitytype","[assembly:/_pro/scenes/missions/miami/miami_yacht.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/trainingset_yacht_miami.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/trainingset_yacht_miami.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/dressing_module_002_miami.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/dressing_module_002_miami.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/npc_module_002_miami.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/npc_module_002_miami.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/miami/scene_miami_yacht.navp].pc_navp","[assembly:/_pro/scenes/missions/miami/scene_miami_yacht.airg].pc_airg","[assembly:/_pro/environment/templates/levels/the_facility/facility_yacht.template?/module_yacht_miami.entitytemplate].pc_entitytype","[assembly:/_pro/environment/templates/levels/the_facility/facility_yacht.template?/module_yacht_miami.entitytemplate].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/real_hangar.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/real_hangar.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht.entity].pc_","[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht.entity].pc_entitytemplate","[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht.entity].pc_entityblueprint","[assembly:/_pro/scenes/missions/thefacility/levelcontrol_module_002_b_miami.brick].pc_entitytype","[assembly:/_pro/scenes/missions/thefacility/levelcontrol_module_002_b_miami.brick].pc_entityblueprint","[assembly:/_pro/scenes/missions/miami/miami_transforms.brick].pc_entitytype","[assembly:/_pro/scenes/missions/miami/miami_transforms.brick].pc_entityblueprint"]}
