- Dismissed bartender now smokes somewhere else - Brings minimap to standalone mod - Replaces location image - Start location entry

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
 	"id": "TeamRuddcy.RealYacht",
 	"name": "Real Yacht",
 	"contentFolders": ["content"],
+	"blobsFolders": ["blobs"],
 	"description": "Converts Freeform Training to a real yacht docked at Miami",
 	"authors": ["Team Ruddcy"],
 	"dependencies": [
