--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 	"description": "Converts Freeform Training to a real yacht docked at Miami",
 	"authors": ["Team Ruddcy"],
 	"dependencies": [
-		"005415E5BE265EFD",{"runtimeID":"003D96EAECB00C82","comment":"adonis_sky","toChunk":1},
+		"00875085D6135309","005415E5BE265EFD",{"runtimeID":"003D96EAECB00C82","comment":"adonis_sky","toChunk":1},
 		{
 			"runtimeID": "0069DB569844D774",
 			"toChunk": 9,
