- Replaces button push exit helicopter with regular exit - Removes weird floating buttons in Engine Room - Makes shared standalone brick that escalation and regular scenes load - Makes escalation scene - Makes mod-friendly contracts brick for online - Converts escalation bricks to be mod-friendly - Makes spawn guns and table only appear in contracts mode (untested)

--- a/manifest.json
+++ b/manifest.json
@@ -264,6 +264,10 @@
 		"type": "entity",
 		"partition": "miami",
 		"path": "[assembly:/_pro/scenes/missions/thefacility/_scene_mission_yacht_escalation.entity].entitytemplate"
+	},{
+		"type": "entity",
+		"partition": "miami",
+		"path": "[assembly:/_pro/scenes/missions/thefacility/createcontract_module_002_b_miami.brick].entitytype"
 	}],
     "loadBefore": [],
 	"frameworkVersion": "2.2.0"
