- Moves Ritter's chair out of way and adjust coverplanes - PFobstacle to garage toilet doorway - Makes outdoor stretched doorway not disappear at angles - Makes duplicate enforcers brick for escalation, removes nullified vanilla file - Updates updates.json

--- a/manifest.json
+++ b/manifest.json
@@ -277,6 +277,10 @@
 		"type": "entity",
 		"partition": "miami",
 		"path": "[assembly:/_pro/scenes/missions/thefacility/vr_overrides_polarbear002_miami.brick].entitytype"
+	},{
+		"type": "entity",
+		"partition": "miami",
+		"path": "[assembly:/_pro/scenes/missions/thefacility/gamechangers_guard_enforcers_miami.brick].entitytype"
 	}],
 	"localisationOverrides": {
 				"007FD5AB96A8AFD6": {
