--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"ajv": "8.12.0"
 	},
 	"scripts": {
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"format": "prettier --write ."
 	},
 	"lint-staged": {
 		"**/*": "prettier --write --ignore-unknown"
