- Fixes old broken freelancer supermap bricks - switches contract from miami_transforms to variant_sunset - Fixes safe clue document position - Removes intel8core brick in case of NAVP issues

--- a/project.json
+++ b/project.json
@@ -48,6 +48,8 @@
 		"[assembly:/_pro/scenes/missions/miami/yacht_night_mild.brick].pc_entitytype",
 		"[assembly:/_pro/scenes/missions/miami/yacht_night_mild.brick].pc_entityblueprint",
 		"[assembly:/_pro/scenes/missions/miami/yacht_night_hot.brick].pc_entitytype",
-		"[assembly:/_pro/scenes/missions/miami/yacht_night_hot.brick].pc_entityblueprint"
+		"[assembly:/_pro/scenes/missions/miami/yacht_night_hot.brick].pc_entityblueprint",
+		"[assembly:/_pro/scenes/missions/miami/variant_sunset.brick].pc_entitytype",
+		"[assembly:/_pro/scenes/missions/miami/variant_sunset.brick].pc_entityblueprint"
 	]
 }
